force-app/main/default/objects/QQ_Config__c/QQ_Config__c.object-meta.xml
<CustomObject>
    <description
  >Quicker Quotes hierarchy custom setting: org/profile/user defaults for the New Quicker Quote flow — opportunity stage, quote validity days, and PDF template.</description>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Quicker Quotes Config</label>
</CustomObject>