force-app/main/default/objects/QQ_Config__c/fields/Default_PDF_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_PDF_Template_Id__c</fullName>
    <description
  >Quicker Quotes: default Quote PDF template Id pre-selected on the Create PDF step of the New Quicker Quote flow.</description>
    <label>Default PDF Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>