force-app/main/default/objects/QQ_Config__c/fields/Default_Quote_Validity__c.field-meta.xml
<CustomField>
    <fullName>Default_Quote_Validity__c</fullName>
    <description
  >Quicker Quotes: number of days added to today to set a new quote's Expiration Date in the New Quicker Quote flow.</description>
    <defaultValue>14</defaultValue>
    <label>Default Quote Expiry (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>