force-app/main/default/objects/QQ_Config__c/fields/Opportunity_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage_Name__c</fullName>
    <description
  >Quicker Quotes: default Opportunity stage applied when the New Quicker Quote flow creates a new Opportunity.</description>
    <label>Opportunity Stage Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>