force-app/main/default/objects/QQ_Config__c/fields/Quote_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Template_Name__c</fullName>
    <description
  >Deprecated, moved to separate custom setting for extensibility</description>
    <label>(Deprecated) Quote Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>