force-app/main/default/objects/QQ_Config__c/fields/Use_PDF__c.field-meta.xml
<CustomField>
    <fullName>Use_PDF__c</fullName>
    <description
  >Quicker Quotes: whether the New Quicker Quote flow offers the Create PDF step (must be false in PE orgs).</description>
    <defaultValue>true</defaultValue>
    <inlineHelpText
  >Determines whether PDF generation options should be used.  Must be false for PE to work.</inlineHelpText>
    <label>Use PDF</label>
    <type>Checkbox</type>
</CustomField>